# rair

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  build.rs  ls  readme.md
.github/workflows/: ci.yml
ci/: appveyor_install.sh  clippy.sh  deploy.sh  install.sh  test.sh
cmd/: Cargo.toml  readme.md
cmd/src/: cli.pest  cmd.rs  error.rs  grammar.rs  help.rs  lib.rs  parser.rs
core/: Cargo.toml
core/src/: cmd.rs  commands.rs  core.rs  helper.rs  lib.rs  writer.rs
core/src/cmds/: mod.rs
core/src/cmds/diff/hexdiff/: mod.rs  test.rs
core/src/cmds/io/: mod.rs
core/src/cmds/io/files/: close_file.rs  list_files.rs  mod.rs  open_file.rs  tests.rs
core/src/cmds/io/mapping/: list_map.rs  map.rs  mod.rs  tests.rs  unmap.rs
core/src/cmds/io/print/: mod.rs  print_base.rs  print_hex.rs  printcsv.rs  printscsv.rs
core/src/cmds/io/write/: mod.rs  tests.rs  writehex.rs  writetofile.rs
core/src/cmds/loc/: mod.rs
core/src/cmds/utils/: env.rs  mod.rs  project.rs
core/src/diff/: mod.rs
core/src/diff/hexdiff/: mod.rs  test.rs
core/src/hex/: helper.rs  hex_env.rs  hex_without_env.rs  mod.rs
core/src/io/: files.rs  map.rs  mod.rs  print.rs  write.rs
core/src/loc/: history.rs  mod.rs  mode.rs  seek.rs
core/src/utils/: env.rs  mod.rs  project.rs  quit.rs
env/: Cargo.toml
env/src/: environment.rs  err.rs  lib.rs  metadata.rs
eval/: Cargo.toml
eval/src/: lib.rs  test.rs
io/: Cargo.toml
io/src/: desc.rs  descquery.rs  io.rs  lib.rs  mapsquery.rs  plugin.rs  utils.rs
io/src/plugins/: base64.rs  defaultplugin.rs  dummy.rs  ihex.rs  malloc.rs  mod.rs  srec.rs
r_config/: Cargo.toml
r_config/src/: lib.rs  r_config.rs
r_cons/: Cargo.toml
r_cons/src/: lib.rs  r_cons.rs
r_core/: Cargo.toml
r_core/src/: lib.rs  rcore.rs
r_crypto/: Cargo.toml
r_crypto/src/: lib.rs  r_crypto.rs
r_hash/: Cargo.toml
r_hash/src/: lib.rs  r_hash.rs
r_io/: Cargo.toml
r_io/src/: lib.rs  r_io.rs
r_search/: Cargo.toml
r_search/src/: keyword.rs  lib.rs  search.rs  searchmode.rs
r_util/: Cargo.toml
r_util/src/: lib.rs  r_file.rs  r_num.rs  r_print.rs  r_util.rs
rair/: .gitignore  .travis.yml  Cargo.toml  Readme.md  readme.md
rair-env/: Cargo.toml  readme.md
rair-env/src/: environment.rs  err.rs  lib.rs  metadata.rs
rair-io/: Cargo.toml  readme.md
rair-io/src/: desc.rs  descquery.rs  io.rs  lib.rs  mapsquery.rs  plugin.rs  utils.rs
rair-io/src/plugins/: base64.rs  defaultplugin.rs  dummy.rs  ihex.rs  malloc.rs  mod.rs  srec.rs
rair/ci/: install.sh  test.sh
rair/rcmd/: Cargo.toml
rair/rcmd/src/: cli.pest  cmd.rs  error.rs  grammar.rs  help.rs  lib.rs  parser.rs
rair/src/: cli.rs  cli.yaml  files.rs  init.rs  lineformatter.rs  rair.rs  rpel.rs
rbdl/: Cargo.toml  specs.md
rbdl/rbdl-ast/: Cargo.toml
rbdl/rbdl-ast/src/: error_list.rs  field.rs  file.rs  full_item.rs  lib.rs  table.rs  types.rs
rbdl/rbdl-derive/: Cargo.toml
rbdl/rbdl-derive/src/: lib.rs
rbdl/rbdl-derive/tests/: binary.rs  binary.stderr  demo.rs  not_str.rs  not_str.stderr
rbdl/rbdl-derive/tests/rbdl/: grammar.rbdl
rbdl/rbdl-syn/: Cargo.toml
rbdl/rbdl-syn/src/: attrs.rs  enums.rs  fields.rs  file.rs  lib.rs  structs.rs  types.rs  value.rs  vec.rs
rbdl/src/: lib.rs
rbdl/src/rbdl_syn/: mod.rs
rbdl/tests/: binary.rs  binary.stderr  demo.rs  not_found.rs  not_found.stderr  not_str.rs  not_str.stderr  run_tests.rs
rbdl/tests/rbdl/: binary.rbdl
rcmd/: Cargo.toml
rcmd/src/: cli.pest  cmd.rs  error.rs  grammar.rs  help.rs  lib.rs  parser.rs
rcore/: Cargo.toml  readme.md
rcore/src/: commands.rs  core.rs  helper.rs  lib.rs  lineformatter.rs  writer.rs
rcore/src/io/: files.rs  map.rs  mod.rs  print.rs  print_hex.rs  write.rs
rcore/src/loc/: history.rs  mod.rs  mode.rs  seek.rs
rcore/src/utils/: mod.rs  quit.rs
renv/: Cargo.toml
renv/src/: environment.rs  err.rs  lib.rs  metadata.rs
rio/: Cargo.toml
rio/src/: defaultplugin.rs  desc.rs  descquery.rs  ihex.rs  io.rs  lib.rs  malloc.rs  mapsquery.rs  plugin.rs  test_aids.rs  utils.rs
rio/src/plugins/: base64.rs  defaultplugin.rs  ihex.rs  mod.rs  srec.rs
rtrees/: Cargo.toml  readme.md
rtrees/src/: interval.rs  ist.rs  ist_node.rs  lib.rs
rtrees/src/bktree/: tree.rs
rtrees/src/ist/: interval.rs  ist_node.rs  ist_wrapper.rs  iter.rs  iter_ref.rs  mod.rs  rb_helpers.rs  serialize.rs  tree.rs
rtrees/src/rbtree/: color.rs  iter.rs  iter_ref.rs  mod.rs  node.rs  rbtree_wrapper.rs  serialize.rs
src/: commands.rs  core.rs  environment.rs  helper.rs  lib.rs  lineformatter.rs  radiff.rs  rafind.rs  rahash.rs  rair.rs  version.rs  writer.rs
src/io/: files.rs  map.rs  mod.rs  print.rs  write.rs
src/loc/: history.rs  mod.rs  mode.rs  seek.rs
src/utils/: cmd.rs  env.rs  mod.rs  project.rs  quit.rs
test/: rafind.sh  rahash.sh
test_file/: Cargo.toml  readme.md
test_file/src/: lib.rs
trees/: Cargo.toml  readme.md
trees/src/: lib.rs
trees/src/bktree/: mod.rs  tree.rs
trees/src/ist/: interval.rs  iter.rs  iter_ref.rs  mod.rs  rb_helpers.rs  serialize.rs  tree.rs
trees/src/rbtree/: color.rs  iter.rs  iter_ref.rs  mod.rs  node.rs  rbtree_wrapper.rs  serialize.rs
visual/: Cargo.toml
visual/src/: lib.rs
visual/src/commands/: mod.rs
visual/src/commands/visual_hex/: addresses.rs  ascii.rs  command.rs  editor.rs  events.rs  help.rs  hex.rs  mod.rs  mode.rs  render.rs  selector.rs
visual/src/visual_hex/: helper.rs  mod.rs  visual_hex_env.rs  visual_hex_without_env.rs
