[workspace]
resolver = "2"
members = [
  "cmd",
  "core",
  "env",
  "io",
  "rair",
  "test_file",
  "trees",
]

[workspace.dependencies]
app_dirs = "1.2"
base64 = "0.11.0"
bitflags = "1.2"
clap = "2.33"
err-derive = "0.2"
flate2 = "1.0"
memmap = "0.7"
nom = "5"
parking_lot="0.10"
pest = "2.1"
pest_derive = "2.1"
rustyline = "5.0"
rustyline-derive = "0.2"
serde = "1.0"
serde_cbor = "0.10"
serde_json = "1.0"
yansi = "0.5"

rair-cmd = {path = "./cmd"}
rair-core = {path = "./core"}
rair-env = {path = "./env"}
test_file = {path = "./test_file"}
rair-io = {path = "./io"}
rair-trees = {path = "./trees"}
