[workspace]
resolver = "2"
members = [
  "cmd",
  "core",
  "env",
  "io",
  "rair",
  "test_file",
  "trees",
]

[workspace.dependencies]
base64 = "0.22.1"
bitflags = "2.6.0"
clap = "4.5.17"
directories = "5.0.1"
err-derive = "0.3.1"
flate2 = "1.0.33"
itertools = "0.13.0"
memmap = "0.7.0"
nom = "7.1.3"
parking_lot="0.12.3"
pest = "2.7.12"
pest_derive = "2.7.12"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = "1.0"
tempfile = "3.12.0"
yansi = "0.5" #break

rair-cmd = {path = "./cmd"}
rair-core = {path = "./core"}
rair-env = {path = "./env"}
test_file = {path = "./test_file"}
rair-io = {path = "./io"}
rair-trees = {path = "./trees"}

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
