[package]
name = "rair-cmd"
edition = "2021"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Rair-Project/rair"
keywords = ["Parser", "cmd", "Command", "Line"]
description = "IO subsystem for RAIR"
categories = ["CLI"]
readme = "readme.md"

[dependencies]
err-derive = {workspace = true}
pest = {workspace = true}
pest_derive = {workspace = true}
