[package]
name = "rair-core"
edition = "2021"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Rair-Project/rair"
keywords = ["Rair", "Core"]
description = "Core module for Rair"
categories = ["cli"]
readme = "../readme.md"

[dependencies]
flate2 = {workspace = true}
parking_lot={workspace = true}
rair-env = {workspace = true}
rair-io = {workspace = true}
rair-trees = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_cbor = {workspace = true}
yansi = {workspace = true}

[dev-dependencies]
test_file = {workspace = true}

[lints]
workspace = true
