[package]
name = "rair-env"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Rair-Project/rair"
keywords = ["heterogeneous", "associative", "list", "dictionary"]
description = "Associative list implementation with heterogeneous value in the (K, V) pair"
categories = ["CLI"]
readme = "readme.md"

[dependencies]
