[package]
name = "rair-io"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = " LGPL-3.0-or-later"
repository = "https://github.com/Rair-Project/rair"
keywords = ["IO", "Memory", "mapping", "Address", "Space"]
description = "IO subsystem for RAIR"
categories = ["Memory management"]
readme = "readme.md"
edition = "2021"

[dependencies]
rair-trees = {workspace = true, features = ["serialize"]}
serde = {workspace = true, features = ["derive", "rc"]}
bitflags = {workspace = true}
memmap = {workspace = true}
nom = {workspace = true}
base64 = {workspace = true}

[dev-dependencies]
test_file = {workspace = true}
serde_json = {workspace = true}

