[package]
name = "rair-env"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
edition = "2018"
license = "LGPL"
repository = "https://github.com/oddcoder/rair"
keywords = ["heterogeneous", "associative", "list", "dictionary"]
description = "Associative list implementation with heterogeneous value in the (K, V) pair"
categories = ["CLI"]
readme = "readme.md"

[dependencies]
