[workspace]
members = [
  "rcmd",
]
[package]
name = "rair"
description = "Reverse Engineering framework written in rust."
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "GPL"
repository = "https://github.com/oddcoder/rair"
readme = "README.md"
keywords = ["Reverse Engineering", "Assembly", "Disassembly", "Malware", "Static Analysis"]
categories = ["command-line-utilities", "Reverse-Engineering"]

[[bin]]
name = "rair"
path = "src/rair.rs"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
rustyline = "5.0"
rustyline-derive = "0.2"
app_dirs = "1.2"
yansi = "0.5"
rcmd = {path = "rcmd"}
rtrees = {git = "https://github.com/rair-project/rair-core"}
rair-io = {git = "https://github.com/rair-project/rair-core"}
rcore = {git = "https://github.com/rair-project/rair-core"}
#rtrees = {path = "../rair-core/rtrees"}
#rio = {path = "../rair-core/rio"}
#rcore = {path = "../rair-core"}
