[package]
name = "rair"
description = "Reverse Engineering framework written in rust."
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Rair-Project/rair"
readme = "readme.md"
keywords = ["Reverse Engineering", "Assembly", "Disassembly", "Malware", "Static Analysis"]
categories = ["command-line-utilities", "Reverse-Engineering"]
edition = "2021"

[[bin]]
name = "rair"
path = "src/rair.rs"

[dependencies]
clap = {workspace = true, features = ["yaml"]}
rustyline = {workspace = true}
rustyline-derive = {workspace = true}
directories = {workspace = true}
yansi = {workspace = true}
parking_lot = {workspace = true}

rair-cmd = {workspace = true}
rair-trees = {workspace = true}
rair-io = {workspace = true}
rair-core = {workspace = true}
