[package]
name = "rcmd"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "LGPL"
repository = "https://github.com/oddcoder/rair"
keywords = ["Parser", "cmd", "Command Line"]
description = "IO subsystem for RAIR"
categories = ["CLI"]
readme = "readme.md"



[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
err-derive = "0.2.1"

