[package]
name = "rcore"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "LGPL"
repository = "https://github.com/oddcoder/rair"
keywords = ["Rair", "Core"]
description = "Core module for Rair"
categories = ["CLI"]
readme = "readme.md"



[dependencies]
yansi = "0.5"

rio = {path = "../rio"}
rtrees = {path = "../rtrees"}

[dev-dependencies]

test_file = {path = "../test_file"}