[package]
name = "rio"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "LGPL"
repository = "https://github.com/oddcoder/rair"
keywords = ["IO", "Memory mapping", "Address Space"]
description = "IO subsystem for RAIR"
categories = ["Memory management"]
readme = "readme.md"



[dependencies]
rtrees = {path = "../rtrees"}
bitflags = "1.2.0"
memmap = "0.7.0"
either_n = "0.2.0"
[dev-dependencies]
tempfile = "3.1.0"
