[package]
name = "rair-rio"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = " LGPL-3.0-or-later"
repository = "https://github.com/oddcoder/rair"
keywords = ["IO", "Memory", "mapping", "Address", "Space"]
description = "IO subsystem for RAIR"
categories = ["Memory management"]
readme = "readme.md"



[dependencies]
rtrees = {path = "../rtrees", features = ["serialize"]}
serde = { version = "1.0", features = ["derive", "rc"]}
bitflags = "1.2"
memmap = "0.7"
nom = "5"
base64 = "0.11.0"

[dev-dependencies]
test_file = {path = "../test_file"}
serde_json = "1.0"

