[package]
name = "rtrees"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = " LGPL-3.0-or-later"
repository = "https://github.com/oddcoder/rair"
keywords = ["Trees", "Intervals", "BST", "BK"]
description = "A Bunch of completely safe augmented tree implementation in rust"
categories = ["Data structures", "Memory management"]
readme = "readme.md"

[features]

default = []
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0"
