[package]
name = "rair-trees"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/oddcoder/rair"
keywords = ["Trees", "Intervals", "BST", "BK"]
description = "A Bunch of completely safe augmented tree implementation in rust"
categories = ["Data structures", "Memory management"]
readme = "readme.md"
edition = "2021"

[features]

default = []
serialize = ["serde"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true}

[dev-dependencies]
serde_json = {workspace = true}

[lints]
workspace = true
