[package]
name = "rbdl-ast"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbdl_ast"

[dependencies]
rbdl-syn={path="../rbdl-syn"}
syn = {version = "1.0", features=["extra-traits", "full"]}
proc-macro2="1.0"