[package]
name = "rbdl-syn"
version = "0.1.0"
authors = ["oddcoder <ahmedsoliman@oddcoder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbdl_syn"

[dependencies]
syn = {version = "1.0", features=["extra-traits", "full"]}
